// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - areas.content: - value[0] - Tooltip 1`] = `mocked`;

exports[`Mock render - areas.content: - value[0] - Tooltip 2`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          data-testid="area-content"
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "areas.content:",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":true}",
      "placement": undefined,
      "title": <HtmlComponent
        html="Tooltip block"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  true,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":true}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - Tooltip 1`] = `mocked`;

exports[`Mock render - default - value[0] - Tooltip 2`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          data-testid="area-content"
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "default",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":true}",
      "placement": undefined,
      "title": undefined,
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.arrowPointAtCenter: true - value[0] - Tooltip 1`] = `mocked`;

exports[`Mock render - properties.arrowPointAtCenter: true - value[0] - Tooltip 2`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": true,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          data-testid="area-content"
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.arrowPointAtCenter: true",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":true}",
      "placement": "topLeft",
      "title": <HtmlComponent
        html="arrowPointAtCenter true"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  true,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":true}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.autoAdjustOverflow: false - value[0] - Tooltip 1`] = `mocked`;

exports[`Mock render - properties.autoAdjustOverflow: false - value[0] - Tooltip 2`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": false,
      "children": Array [
        <div
          data-testid="area-content"
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.autoAdjustOverflow: false",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":true}",
      "placement": "right",
      "title": <HtmlComponent
        html="autoAdjustOverflow false"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  true,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":true}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.autoAdjustOverflow: true - value[0] - Tooltip 1`] = `mocked`;

exports[`Mock render - properties.autoAdjustOverflow: true - value[0] - Tooltip 2`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": true,
      "children": Array [
        <div
          data-testid="area-content"
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.autoAdjustOverflow: true",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":true}",
      "placement": "right",
      "title": <HtmlComponent
        html="autoAdjustOverflow true"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  true,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":true}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.color: blue - value[0] - Tooltip 1`] = `mocked`;

exports[`Mock render - properties.color: blue - value[0] - Tooltip 2`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          data-testid="area-content"
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": "blue",
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.color: blue",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":true}",
      "placement": undefined,
      "title": <HtmlComponent
        html="color blue"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  true,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":true}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.defaultVisible: true - value[0] - Tooltip 1`] = `mocked`;

exports[`Mock render - properties.defaultVisible: true - value[0] - Tooltip 2`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          data-testid="area-content"
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": true,
      "destroyTooltipOnHide": undefined,
      "id": "properties.defaultVisible: true",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":true}",
      "placement": undefined,
      "title": <HtmlComponent
        html="defaultVisible true"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  true,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":true}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mouseEnterDelay: 1 - value[0] - Tooltip 1`] = `mocked`;

exports[`Mock render - properties.mouseEnterDelay: 1 - value[0] - Tooltip 2`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          data-testid="area-content"
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.mouseEnterDelay: 1",
      "mouseEnterDelay": 1,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":true}",
      "placement": undefined,
      "title": <HtmlComponent
        html="mouseEnterDelay 1"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  true,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":true}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mouseLeaveDelay: 1 - value[0] - Tooltip 1`] = `mocked`;

exports[`Mock render - properties.mouseLeaveDelay: 1 - value[0] - Tooltip 2`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          data-testid="area-content"
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.mouseLeaveDelay: 1",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": 1,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":true}",
      "placement": undefined,
      "title": <HtmlComponent
        html="mouseLeaveDelay 1"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  true,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":true}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.overlayStyle: border: 5px solid blue - value[0] - Tooltip 1`] = `mocked`;

exports[`Mock render - properties.overlayStyle: border: 5px solid blue - value[0] - Tooltip 2`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          data-testid="area-content"
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.overlayStyle: border: 5px solid blue",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"style\\":{\\"border\\":\\"5px solid blue\\"},\\"options\\":true}",
      "placement": undefined,
      "title": <HtmlComponent
        html="Tooltip block"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "border": "5px solid blue",
                  },
                  true,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"style\\":{\\"border\\":\\"5px solid blue\\"},\\"options\\":true}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.placement - value[0] - Tooltip 1`] = `mocked`;

exports[`Mock render - properties.placement - value[0] - Tooltip 2`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          data-testid="area-content"
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.placement",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":true}",
      "placement": "topLeft",
      "title": <HtmlComponent
        html="placement topLeft"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  true,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":true}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - Tooltip 1`] = `mocked`;

exports[`Mock render - properties.title - value[0] - Tooltip 2`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          data-testid="area-content"
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.title",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":true}",
      "placement": undefined,
      "title": <HtmlComponent
        html="Tooltip block"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  true,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":true}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title with html - value[0] - Tooltip 1`] = `mocked`;

exports[`Mock render - properties.title with html - value[0] - Tooltip 2`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          data-testid="area-content"
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.title with html",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":true}",
      "placement": undefined,
      "title": <HtmlComponent
        html=<div style="background-color:orange;">
  Tooltip Html
</div>
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  true,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":true}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.trigger: click - value[0] - Tooltip 1`] = `mocked`;

exports[`Mock render - properties.trigger: click - value[0] - Tooltip 2`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          data-testid="area-content"
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.trigger: click",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":true}",
      "placement": undefined,
      "title": <HtmlComponent
        html="trigger click"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  true,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":true}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "trigger": "click",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.zIndex: 100 - value[0] - Tooltip 1`] = `mocked`;

exports[`Mock render - properties.zIndex: 100 - value[0] - Tooltip 2`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          data-testid="area-content"
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.zIndex: 100",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":true}",
      "placement": undefined,
      "title": <HtmlComponent
        html="zIndex 1000"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  true,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":true}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "trigger": "hover",
      "zIndex": 1000,
    },
    Object {},
  ],
]
`;
